--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Go
+name: Build
 
 on:
   push:
@@ -28,6 +28,4 @@ jobs:
 
     - name: Build
       run: go build -v .
-    
-    - name: Go report card
-      uses: creekorful/goreportcard-action@v1.0
+
