--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,9 +23,8 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Get dependencies
-      run: |
-        go mod vendor
+      run: go mod vendor
 
     - name: Build
-      run: go build -v .
+      run: go build -mod vendor
 
