--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,8 @@ jobs:
     - name: Build
       run: go build
 
-  test:
-    name: Test
+  unit_test:
+    name: Unit Tests
     runs-on: ubuntu-latest
     steps:
 
